# luxonis-ml

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  labeler.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/luxonis-ml-style/: Dockerfile  action.yaml  entrypoint.sh
.github/workflows/: BOM.yaml  actions_autoupdate.yaml  add-metadata.yaml  bom-compatibility-tests.yaml  bom-tests.yaml  ci.yaml  codecov.yaml  docs.yaml  luxonis-ml-ci.yaml  luxonis-ml-style.yaml  luxonis_ci.yaml  pre-commit.yaml  python-publish.yml  unittests.yaml  update-cov-report.yaml  update-test-durations.yaml
docs/: requirements.txt
examples/: COCO_people_subset.ipynb  Data_Custom_Example.ipynb  Data_Parser_Example.ipynb  Embeddings_LDF_Qdrant_Example.ipynb  Embeddings_LDF_Qdrant_Example2.ipynb  Embeddings_LDF_Weaviate_Example.ipynb  Embeddings_Processing_Example.ipynb  parser_test.ipynb  test_emb_process.ipynb  test_ldf_emb.ipynb
examples/utils/: data_utils.py  torch_utils.py
extra_requirements/: gcs.txt  mlflow.txt  roboflow.txt  s3.txt
luxonis_ml/: __init__.py  __main__.py  guard_extras.py  luxonis_ml.py  typing.py
luxonis_ml/data/: README.md  __init__.py  __main__.py  augmentations.py  dataset.py  loader.py  parsers.py  requirements.txt
luxonis_ml/data/augmentations/: README.md  __init__.py  albumentations_engine.py  augmentations.py  base_engine.py  base_pipeline.py  batch_compose.py  batch_processors.py  batch_transform.py  batch_utils.py  letterbox_resize.py  mixup.py  mosaic.py  utils.py
luxonis_ml/data/datasets/: README.md  __init__.py  annotation.py  base_dataset.py  luxonis_dataset.py  metadata.py  migration.py  source.py  utils.py
luxonis_ml/data/exporters/: __init__.py  base_exporter.py  classification_directory_exporter.py  coco_exporter.py  createml_exporter.py  darknet_exporter.py  export_utils.py  exporter_utils.py  fiftyone_classification_exporter.py  native_exporter.py  prepared_ldf.py  segmentation_mask_directory_exporter.py  tensorflow_csv_exporter.py  ultralytics_ndjson_exporter.py  voc_exporter.py  yolo_exporter.py  yolov4_exporter.py  yolov6_exporter.py  yolov8_bbox_exporter.py  yolov8_exporter.py  yolov8_instance_segmentation_exporter.py  yolov8_keypoints_exporter.py
luxonis_ml/data/loaders/: README.md  __init__.py  base_loader.py  luxonis_loader.py
luxonis_ml/data/parsers/: README.md  __init__.py  base_parser.py  classification_directory_parser.py  coco_img_with_ann_parser.py  coco_parser.py  create_ml_parser.py  darknet_parser.py  fiftyone_classification_parser.py  luxonis_parser.py  native_parser.py  segmentation_mask_directory_parser.py  solo_parser.py  tensorflow_csv_parser.py  ultralytics_ndjson_parser.py  ultralytics_parser.py  voc_parser.py  yolov4_parser.py  yolov6_parser.py  yolov6obb_parser.py  yolov8_parser.py
luxonis_ml/data/utils/: __init__.py  augmentations_collector.py  cli_utils.py  constants.py  data_utils.py  enums.py  label_utils.py  labelstudio.py  ldf_equivalence.py  parquet.py  plot_utils.py  prepare_ldf_export.py  remote_file_downloader.py  task_utils.py  types.py  visualizations.py
luxonis_ml/embeddings/: README.md  __init__.py  requirements.txt
luxonis_ml/embeddings/methods/: OOD.py  __init__.py  duplicate.py  mistakes.py  representative.py
luxonis_ml/embeddings/utils/: __init__.py  embedding.py  ldf.py  model.py  qdrant.py  vectordb.py  weaviate.py
luxonis_ml/enums/: __init__.py  enums.py
luxonis_ml/nn_archive/: __init__.py  __main__.py  archive_generator.py  config.py  model.py  requirements.txt  utils.py
luxonis_ml/nn_archive/config_building_blocks/: __init__.py
luxonis_ml/scheme/v1/: __init__.py  archive_generator.py  config.py  model.py
luxonis_ml/telemetry/: README.md  __init__.py  cli.py  client.py  config.py  context.py  events.py  redaction.py  singleton.py  suppression.py
luxonis_ml/telemetry/backends/: __init__.py  base.py  noop.py  posthog.py  stdout.py
luxonis_ml/telemetry/cli/: __init__.py  cyclopts.py  shared.py  typer.py
luxonis_ml/tracker/: README.md  __init__.py  mlflow_plugins.py  requirements.txt  tracker.py
luxonis_ml/utils/: README.md  __init__.py  __main__.py  config.py  environ.py  filesystem.py  graph.py  logging.py  path.py  pydantic_utils.py  registry.py  requirements-fsspec.txt  requirements.txt  rich_utils.py  telemetry.py
src/luxonis_ml/: __init__.py  guard_extras.py  luxonis_ml.py
src/luxonis_ml/data/: __init__.py  augmentations.py  dataset.py  dataset_recognition.py  labelstudio.py  loader.py  parsers.py  requirements.txt  session.py  version.py
src/luxonis_ml/embeddings/: __init__.py  data_utils.py  emb_OOD.py  emb_duplicate.py  emb_mistakes.py  emb_representative.py  embedding_utils.py  embeddings_processing.py  extract_embeddings.py  ldf_emb.py  model_utils.py  qdrant_utils.py  requirements.txt  test_emb_process.ipynb  test_ldf_emb.ipynb
src/luxonis_ml/enums/: __init__.py  enums.py
src/luxonis_ml/fiftyone_plugins/: database.py
tests/: conftest.py  performance.py  test.py  test_cli.py  test_config.py  test_typing.py
tests/test_augmentations/: conftest.py  test_batched.py  test_letterbox.py  test_mixup.py  test_mosaic.py
tests/test_data/: aug_labels.json  conftest.py  test_ann_creation.py  test_annotations.py  test_classes_ordering.py  test_cli.py  test_coco_imagenet_parsing.py  test_dataset.py  test_dataset_integration.py  test_dataset_metadata.py  test_export.py  test_health.py  test_ldf_equivalence.py  test_loader.py  test_migration.py  test_multi_input.py  test_native_paths.py  test_parse_export_equivalence.py  test_parsers.py  test_remote_file_downloader.py  test_task_ingestion.py  test_zip_layout_equivalence.py  utils.py
tests/test_nn_archive/: heads.py  test_nn_archive.py  test_utils.py
tests/test_telemetry/: test_telemetry.py
tests/test_utils/: test_config.py  test_environ.py  test_filesystem.py  test_graph.py  test_path.py  test_registry.py
tests/utils/: test_config.py
tools/: benchmark.py  migrate.py
(+151 files in other folders)
